--- a/index.html
+++ b/index.html
@@ -79,14 +79,34 @@
                     <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
-                    <div class="composition"><img src="img/nat-1-large.jpg"
-                            class="composition__photo composition__photo--p1">
-                    </div>
-                    <div class="composition"><img src="img/nat-2-large.jpg"
-                            class="composition__photo composition__photo--p2">
-                    </div>
-                    <div class="composition"><img src="img/nat-3-large.jpg"
-                            class="composition__photo composition__photo--p3">
+                    <div class="composition">
+
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                            class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg">
+                        <!-- 900/16 = 56,25em etc.
+                            the way we calculate 20vw is by looking at the width of the image 171/900 which is the view port and we now know 
+                            that it's =20% which is the same as 20vw
+                        sizes just gives the browser more information to make a better decision of which image to use nat-1 or nat-1-large -->
+                        <img srcset=" img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                            class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg">
+
+
+                        <img srcset=" img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" class="composition__photo
+                            composition__photo--p3" src="img/nat-3-large.jpg">
+
+
+                        <!--
+
+                        <img src="img/nat-1-large.jpg" class="composition__photo composition__photo--p1">
+
+                        <img src="img/nat-2-large.jpg" class="composition__photo composition__photo--p2">
+
+                        <img src="img/nat-3-large.jpg" class="composition__photo composition__photo--p3">
+
+                        -->
                     </div>
                 </div>
             </div>
@@ -369,6 +389,7 @@
                 <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo"
                     src="img/logo-green-2x.png">
             </picture>
+            <!-- if max-width is 37.5em it will use the first source srcset of images if not it will use the second srcset of images-->
 
 
 
